# gds

./: .gitignore  AUTHORS  HACKING  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  VERSION  autogen.pl  configure.ac
config/: Makefile.am  c_get_alignment.m4  distscript.sh  gds.m4  gds_check_attributes.m4  gds_check_broken_qsort.m4  gds_check_compiler_version.m4  gds_check_icc.m4  gds_check_ident.m4  gds_check_package.m4  gds_check_vendor.m4  gds_check_visibility.m4  gds_config_subdir.m4  gds_config_subdir_args.m4  gds_ensure_contains_optflags.m4  gds_functions.m4  gds_get_version.sh  gds_load_platform.m4  gds_mca.m4  gds_search_libs.m4  gds_setup_cc.m4  gds_setup_libevent.m4
contrib/: buildrpm.sh  cron-run-all-md2nroff.pl  make_dist_tarball  md2nroff.pl  pmix-release.sh  pmix-valgrind.supp  pmix.spec  pmix_jenkins.sh
contrib/coverity/: coverity-model.c
contrib/nightly/: create_tarball.sh  pmix-nightly-coverity.pl  pmix-nightly-tarball.sh
include/: Makefile.am  gds.h  gds_common.h
src/: Makefile.am  mca.h
src/class/: Makefile.include  gds_hash_table.c  gds_hash_table.h  gds_hotel.c  gds_hotel.h  gds_list.c  gds_list.h  gds_object.c  gds_object.h  gds_pointer_array.c  gds_pointer_array.h  gds_ring_buffer.c  gds_ring_buffer.h  gds_value_array.c  gds_value_array.h
src/include/: Makefile.include  align.h  gds_config_bottom.h  gds_config_top.h  gds_socket_errno.h  gds_stdint.h  hash_string.h  prefetch.h  rename.h  types.h
src/mca/base/: Makefile.am  base.h  gds_mca_base_close.c  gds_mca_base_component_compare.c  gds_mca_base_component_find.c  gds_mca_base_component_repository.c  gds_mca_base_component_repository.h  gds_mca_base_components_close.c  gds_mca_base_components_open.c  gds_mca_base_components_register.c  gds_mca_base_components_select.c  gds_mca_base_framework.c  gds_mca_base_framework.h  gds_mca_base_list.c  gds_mca_base_open.c  gds_mca_base_parse_paramfile.c  gds_mca_base_var.c  gds_mca_base_var.h  gds_mca_base_var_enum.c  gds_mca_base_var_enum.h  gds_mca_base_var_group.c  gds_mca_base_var_group.h  gds_mca_base_vari.h  help-mca-base.txt  help-mca-var.txt
src/mca/gdl/: Makefile.am  configure.m4  gdl.h
src/mca/gdl/base/: Makefile.am  base.h  gdl_base_close.c  gdl_base_fns.c  gdl_base_open.c  gdl_base_select.c
src/mca/gdl/gdlopen/: Makefile.am  configure.m4  gdl_pdlopen.h  gdl_pdlopen_component.c  gdl_pdlopen_module.c
src/mca/gdstor/: Makefile.am  gdstor.h
src/mca/gdstor/base/: Makefile.am  base.h  gdstor_base_frame.c  gdstor_base_select.c
src/mca/gdstor/lhash/: Makefile.am  gdstor_lhash.c  gdstor_lhash.h  gdstor_lhash_component.c
src/mca/ginstalldirs/: Makefile.am  configure.m4  ginstalldirs.h
src/mca/ginstalldirs/base/: Makefile.am  base.h  ginstalldirs_base_components.c  ginstalldirs_base_expand.c
src/mca/ginstalldirs/config/: Makefile.am  configure.m4  gds_ginstalldirs_config.c  ginstall_dirs.h.in
src/mca/ginstalldirs/env/: Makefile.am  configure.m4  gds_ginstalldirs_env.c
src/runtime/: Makefile.include  gds_finalize.c  gds_init.c  gds_params.c  gds_progress_threads.c  gds_progress_threads.h  gds_rte.h  help-gds-runtime.txt
src/util/: Makefile.include  argv.c  argv.h  basename.c  basename.h  crc.c  crc.h  error.c  error.h  fd.c  fd.h  getid.c  getid.h  hash.c  hash.h  keyval_parse.c  keyval_parse.h  os_path.c  os_path.h  output.c  output.h  path.c  path.h  pmix_environ.c  pmix_environ.h  printf.c  printf.h  show_help.c  show_help.h  show_help_lex.c  show_help_lex.h  show_help_lex.l  strnlen.h  timings.c  timings.h
src/util/keyval/: Makefile.am  keyval_lex.c  keyval_lex.h  keyval_lex.l
