#
# Copyright (c) 2015 Cisco Systems, Inc.  All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_gdl_la_SOURCES += \
        base/gdl_base_open.c \
        base/gdl_base_close.c \
        base/gdl_base_select.c \
        base/gdl_base_fns.c
