#
# Copyright (c) 2015      Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2016      Intel, Inc. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_gdstor_la_SOURCES += \
        base/gdstor_base_frame.c \
        base/gdstor_base_select.c
