#
# Copyright (c) 2006      Los Alamos National Security, LLC.  All rights
#                         reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

headers += \
        base/base.h

libmca_ginstalldirs_la_SOURCES += \
        base/ginstalldirs_base_components.c \
        base/ginstalldirs_base_expand.c
